--- a/tab-man/popup/page.css
+++ b/tab-man/popup/page.css
@@ -1,6 +1,9 @@
-html,
+html {
+  background-color: #cca940;
+}
 body {
-  width: 800px;
+  width: 650px;
+  /* height: 500px; */
   background-color: #cca94098;
   /* #ffc000; */
   margin: 0px !important;
@@ -10,15 +13,21 @@ body {
   border-radius: 5px; */
 }
 
+/* Dragable 
+[draggable=true] {
+  cursor: move;
+}
+*/
+
 .boxLeft {
-  padding-left: 5px;
+  padding-left: 1px;
   padding-top: 1px;
   /*padding-right: 6px;*/
 }
 
 .boxRight {
   float: right;
-  padding-right: 5px;
+  padding-right: 6px;
 }
 
 .nameInput {
@@ -33,9 +42,8 @@ body {
   width: 100%;
 }
 
-
-.pasteArea {
-  height: 100px;
+.pastearea {
+  height: 500px;
   margin-top: -1px;
   resize: none;
   white-space: pre;
