--- a/tab-man/src/popup.css
+++ b/tab-man/src/popup.css
@@ -14,6 +14,29 @@ body {
   border: 3px solid rgba(0, 0, 0, 0.3) !important;
   font-family: Arial, Helvetica, sans-serif;
 }
+/*
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+*/
 
 .boxLeft {
   padding-left: 1px;
@@ -26,8 +49,9 @@ body {
   padding-right: 6px;
 }
 
+/* Input box containing name */
 .nameInput {
-  width: 50vh;
+  width: 40vh;
 }
 
 .messages {
