--- a/tab-man/src/page.css
+++ b/tab-man/src/page.css
@@ -1,20 +1,18 @@
-html {
-  background-color: #cca940;
-}
-body {
-  width: 800px;
+.container {
+
+  width: 70%;
   height: 100%;
   font-size: 18px;
+
+  display: block;
+  margin: auto;
 }
 
 .nameInput {
-  width: 80vh;
+  width: 70%;
 }
 
 #listText {
-  /* height: 1000px; */
-  /* max-height: 85vh; */
   overflow: auto;
-  /* overflow-y: scroll;
-  overflow-x: hidden; */
+
 }
