--- a/tab-man/src/popup.css
+++ b/tab-man/src/popup.css
@@ -3,17 +3,68 @@ html {
 }
 
 body {
-  width: 450px;
-  /* height: 500px; */
   background-color: #cca94098;
-  /* #ffc000; */
-  margin: 0px !important;
-  /* 
-  margin-right: 6px;
-  border-radius: 5px; */
-  border: 3px solid rgba(0, 0, 0, 0.3) !important;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif; 
+  /* height: 500px; */
+
+  /* margin-right: 6px; */
+  /* margin: 0px !important; */
+
 }
+
+.container {
+  width: 500px;
+  display: block;
+  margin: auto;
+
+  font-size: 18px;
+
+  /* border: 3px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px; */
+}
+
+/* Input box containing name */
+.nameInput {
+  width: 40%;
+}
+
+.messages {
+  height: 22px;
+  margin-top: -1px;
+  resize: none;
+  white-space: pre;
+  width: 100%;
+}
+
+#listText {
+  /* background-color: green; */
+  max-height: 85vh;
+
+  /* overflow: auto; */
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#_pastearea_txt {
+  margin-top: -1px;
+  resize: none;
+  white-space: pre;
+  width: 100%;
+  height: 85vh;
+
+  margin-right: 0px;
+  padding-right: 0px !important;
+
+  /* height: 500px; */
+  /* max-height: 80vh; */
+}
+
+/* textarea {
+  width: 100vh;
+  height: 90vh;
+} */
+
+
 /*
 .btn {
   display: inline-block;
@@ -49,41 +100,6 @@ body {
   padding-right: 6px;
 }
 
-/* Input box containing name */
-.nameInput {
-  width: 40vh;
-}
-
-.messages {
-  height: 22px;
-  margin-top: -1px;
-  resize: none;
-  white-space: pre;
-  width: 100%;
-}
-
-#listText {
-  /* background-color: green; */
-  max-height: 85vh;
-  /* overflow: auto; */
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-#_pastearea_txt {
-  margin-top: -1px;
-  resize: none;
-  white-space: pre;
-  width: 99%;
-  height: 85vh;
-  /* height: 500px; */
-  /* max-height: 80vh; */
-}
-
-/* textarea {
-  width: 100vh;
-  height: 90vh;
-} */
 
 /* NAVBAR */
 .navbar {
